# SVWM

./: CMakeLists.txt  README.md  stdvector_test.cpp  test.c
src/: CMakeLists.txt  svwm.c  svwm.h
